<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tek.landlord.MainActivity" >

       <item
         android:orderInCategory="100"
        android:title="@string/notification"
        android:id="@+id/action_notifications"
        android:icon="@drawable/alarm"
        app:showAsAction="ifRoom"/>
    <item
        android:orderInCategory="200"
        android:title="@string/alarm"
        android:id="@+id/action_alarms"
        android:icon="@drawable/bubble"
       app:showAsAction="ifRoom"/>
    <item
        android:orderInCategory="300"
        android:title="@string/calendar"
        android:id="@+id/action_calendar"
        android:icon="@drawable/calendar"
       app:showAsAction="ifRoom"/>
    
    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
-->
</menu>
